# GPRegressionCpp

./: .gitignore  CMakeLists.txt  GPRegressionCpp.cpp  GPRegressionCpp.h  README.md  vcpkg.json
include/: README.md  gp_regression.hpp
include/clustering/k-means/: README.md  kmeans.hpp
include/decomposition/PCA/: README.md  pca.hpp
include/kernels/: kernel.hpp  kernel_oprator.hpp
include/kernels/ConstantKernel/: README.md  constant_kernel.hpp
include/kernels/RBFKernel/: README.md  rbf_kernel.hpp
include/kernels/WhiteNoiseKernel/: README.md  white_noise_kernel.hpp
include/metrics/SilhouetteScore/: README.md  silhouette_score.hpp
include/optimize/: optimizer.hpp
include/optimize/DualAnnealing/: README.md  dual_annealing.hpp
include/optimize/NelderMead/: README.md  nelder_mead.hpp
scripts/: compare_gpr_result.py  gen_dual_annealing_test_data.py  gen_gpr_test_data.py  gen_kmeans_test_data.py  gen_nelder_mead_test_data.py  gen_pca_test_data.py  gen_silhouette_score_test_data.py  nelder_mead_test_data.json
tests/: CMakeLists.txt
tests/clustering/k-means/: CMakeLists.txt  kmeans_test.cpp
tests/clustering/k-means/data/: kmeans_test_data.json
tests/decomposition/PCA/: CMakeLists.txt  pca_test.cpp
tests/decomposition/PCA/data/: pca_test_data.json
tests/kernels/ConstantKernel/: CMakeLists.txt  constant_kernel_test.cpp
tests/kernels/KernelOperator/: CMakeLists.txt  kernel_oprator_test.cpp
tests/kernels/RBFKernel/: CMakeLists.txt  rbf_kernel_test.cpp
tests/kernels/WhiteNoiseKernel/: CMakeLists.txt  white_noise_kernel_test.cpp
tests/metrics/SilhouetteScore/: CMakeLists.txt  silhouette_score_test.cpp
tests/metrics/SilhouetteScore/data/: silhouette_score_test_data.json
tests/optimize/DualAnnealing/: CMakeLists.txt  dual_annealing_test.cpp
tests/optimize/DualAnnealing/data/: dual_annealing_test_data.json
tests/optimize/NelderMead/: CMakeLists.txt  nelder_mead_test.cpp
tests/optimize/NelderMead/data/: nelder_mead_test_data.json
tests/regressor/: CMakeLists.txt  gp_regression_test.cpp
tests/regressor/cpp-test-result/: case1_simple.json  case2_multidim.json  case3_ard.json  case4_dual_annealing.json
tests/regressor/data/: gpr_test_data.json
